--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>RedditCopy</title>
+  <title>AngularLogin</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <div class="ui main text container">
-    <app-root>Loading </app-root> <!-- <--- Our app loads here! -->
-  </div>
+  <app-root></app-root>
 </body>
 </html>
